# electrs

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  electrs-get-popular-mainnet  electrs-start-liquid  electrs-start-liquidtestnet  electrs-start-mainnet  electrs-start-signet  electrs-start-testnet  init-electrs-sockets  start  testnet-bench.sh
.github/actions/ci-rust-setup/: action.yml
.github/workflows/: ci.yml  on-tag.yml
contrib/: popular-scripts.txt
doc/: schema.md
query/: block.sh  block_from_height.sh  hash_from_height.sh  height.sh  version.sh
scripts/: checks.sh
src/: app.rs  bulk.rs  chain.rs  config.rs  daemon.rs  errors.rs  fake.rs  index.rs  lib.rs  mempool.rs  metrics.rs  notify.rs  query.rs  rest.rs  rpc.rs  signal.rs  store.rs  util.rs
src/electrum/: client.rs  discovery.rs  server.rs
src/electrum/discovery/: default_servers.rs
src/elements/: asset.rs  peg.rs  registry.rs
src/new_index/: db.rs  fetch.rs  mempool.rs  precache.rs  query.rs  schema.rs
src/util/: bincode_tests.rs  bincode_util.rs  block.rs  electrum_merkle.rs  mod.rs  script.rs  transaction.rs
src/utils/: address.rs
